--- a/TravelExpertsMVC/TravelExpertsMVC.csproj
+++ b/TravelExpertsMVC/TravelExpertsMVC.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TravelExpertsData\TravelExpertsData.csproj" />
+  </ItemGroup>
+
 </Project>
