--- a/TravelExpertsMVC/appsettings.json
+++ b/TravelExpertsMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TravelExpertsCon": "Server=localhost\\sqlexpress;Database=TravelExperts;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  }
 }
